<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="todo">TODO</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="timeline">Timeline</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="write_later">Write Later</string>
    <string name="mood">Mood</string>
    <string name="worst">worst</string>
    <string name="best">best</string>
    <string name="bad">bad</string>
    <string name="neutral">neutral</string>
    <string name="good">good</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="save">save</string>
    <string name="adjust_date_time">adjust date time</string>
    <string name="more">more</string>
    <string name="add_tags">add tags</string>
    <string name="add_images">add images</string>
    <string name="location">location</string>
    <string name="add_list">add list</string>
    <string name="bold">bold</string>
    <string name="italic">italic</string>
    <string name="quote">quote</string>
    <string name="back">back</string>
</resources>